[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_andrea"
version = "0.1.0"
description = "Comparação entre modelos Diffusion e GAN"
authors = [
    {name = "Andrea", email = "andrea@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.10.0",
    "torchvision>=0.11.1",
    "numpy>=1.21.0",
    "matplotlib>=3.4.3",
    "pillow>=9.0.0",
    "scikit-image>=0.18.3",
    "piq>=0.7.0",
    "torchmetrics>=0.7.0",
    "tqdm>=4.62.3",
    "pandas>=2.0.3",
    "psutil>=7.0.0",
    "opencv-python>=4.11.0.86",
    "seaborn>=0.13.2",
    "scikit-learn>=1.3.2",
    "pyyaml>=6.0.2",
    "torch-fidelity>=0.3.0",
    "dotmap>=1.3.30",
    "imutils>=0.5.4",
    "requests>=2.32.3",
]

[project.urls]
"Homepage" = "https://github.com/username/ai_andrea"
"Bug Tracker" = "https://github.com/username/ai_andrea/issues"
